--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,9 @@
 * {
-  margin: 0 auto;
-  background-color: pink; }
+  margin: 0 auto; }
+
+#map {
+  width: 100vw;
+  height: 100vh;
+  z-index: 1; }
 
 /*# sourceMappingURL=style.css.map */
