--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,4 +1,10 @@
 * {
 	margin: 0 auto;
-	background-color: pink;
+	// background-color: blue;
+}
+
+#map{
+	width: 100vw;
+	height: 100vh;
+	z-index: 1;
 }
