--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,6 +9,51 @@
 	margin-top: 1em;
 	position: relative;
 
+	#homepage {
+		position: absolute;
+	    height:100%;
+	    width:100%;
+	    z-index: 2;
+	    top: 0;
+	    background-color: #f1c40f;
+		text-align: center;
+
+	    #helpButton {
+	    	width: 40px;
+			height: 40px;
+			border-radius: 10px;
+			background-color: #F1C40F;
+			margin: 10px 10px 75px 325px;
+			display: flex;
+			align-items: center;
+			border: solid 2px white;
+
+			.fa-question {
+					width: 20px;
+					height: 20px;
+					color: white;
+				}
+	    }
+
+	    #logo {
+	    	width: 110px;
+			height: 110px;
+			border-radius: 10px;
+			background-color: pink;
+			margin-bottom: 120px;
+	    }
+
+	    button {
+	    	width: 255px;
+	    	height: 70px;
+	    	border-radius: 10px;
+	    	background-color: #fe8c00;
+	    	color: #FFFFFF;
+	    	font-size: 36px;
+	    	border: none;
+	    }
+	}
+
 	#formContent {
 		position: absolute;
 	    height:100%;
