--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,15 @@
     position: absolute;
     height: 100%;
     width: 100%;
-    z-index: 2;
+    z-index: 1;
     top: 0;
     background-color: #f1c40f;
-    text-align: center;
-    display: none; }
+    text-align: center; }
+    #wrapper #homepage #homepage.hide {
+      opacity: 0;
+      height: 100%;
+      width: 1%;
+      transition: all .75s ease; }
     #wrapper #homepage #helpButton {
       width: 40px;
       height: 40px;
@@ -35,16 +39,23 @@
       border-radius: 10px;
       background-color: pink;
       margin-bottom: 120px; }
-    #wrapper #homepage button {
-      width: 255px;
-      height: 70px;
-      border-radius: 10px;
-      background-color: #fe8c00;
+    #wrapper #homepage h1 {
       color: #FFFFFF;
-      font-size: 36px;
-      border: none; }
-  #wrapper #formContent {
+      font-size: 20px; }
+  #wrapper #helpContainer {
+    width: 100%;
+    height: 100%;
+    background-color: #f1c40f;
     position: absolute;
+    z-index: 2;
+    top: 0;
+    display: none; }
+    #wrapper #helpContainer #helpContent {
+      width: 345px;
+      height: 637px;
+      margin-top: 15px;
+      text-align: center; }
+  #wrapper #formContent {
     height: 100%;
     width: 100%; }
     #wrapper #formContent #searchContainer {
@@ -52,32 +63,33 @@
       height: 60px;
       background-color: #F1C40F;
       display: flex;
-      text-align: center;
       align-items: center; }
       #wrapper #formContent #searchContainer #formInput {
         width: 310px;
-        height: 40px;
+        height: 38px;
         border-radius: 10px;
-        margin: 0px 0px 0px 10px;
         border-style: none; }
       #wrapper #formContent #searchContainer #submitBtn {
         width: 40px;
-        height: 40px;
+        height: 41px;
         border-radius: 10px;
+        border-style: none;
         margin: 0 auto;
         padding: 0;
         display: inline-block;
-        line-height: 40px;
-        text-align: center; }
+        line-height: 42px;
+        text-align: center;
+        background-color: #fe8c00; }
         #wrapper #formContent #searchContainer #submitBtn .fa-search {
           width: 20px;
-          height: 20px; }
+          height: 20px;
+          color: #FFF; }
     #wrapper #formContent #map {
       width: 100%;
       height: 505px; }
     #wrapper #formContent #optionContainer {
       width: 375px;
-      height: 100px;
+      height: 101.5px;
       background-color: #F1C40F;
       text-align: center; }
       #wrapper #formContent #optionContainer label {
@@ -87,10 +99,24 @@
         #wrapper #formContent #optionContainer label .iconContainer {
           width: 55px;
           height: 55px;
-          background-color: #6B6B6B;
+          background-color: #878787;
           margin-top: 10px;
           margin-bottom: 5px;
-          border-radius: 10px; }
+          border-radius: 10px;
+          display: flex;
+          align-items: center; }
+          #wrapper #formContent #optionContainer label .iconContainer .fa-bed {
+            width: 40px;
+            height: 40px;
+            color: #FFF; }
+          #wrapper #formContent #optionContainer label .iconContainer .fa-tree {
+            width: 40px;
+            height: 40px;
+            color: #FFF; }
+          #wrapper #formContent #optionContainer label .iconContainer .fa-utensils {
+            width: 40px;
+            height: 40px;
+            color: #FFF; }
         #wrapper #formContent #optionContainer label p {
           font-size: 12px; }
       #wrapper #formContent #optionContainer label > input {
@@ -102,5 +128,58 @@
       #wrapper #formContent #optionContainer label > input:checked + div {
         /* (RADIO CHECKED) IMAGE STYLES */
         background-color: #fe8c00; }
+  #wrapper #modalContainer {
+    width: 375px;
+    height: 667px;
+    position: absolute;
+    top: 0px;
+    display: none;
+    background-color: rgba(0, 15, 30, 0.5); }
+    #wrapper #modalContainer #imgContainer {
+      width: 355px;
+      height: 220px;
+      background-color: pink;
+      margin-top: 10px;
+      border-radius: 10px 10px 0px 0px; }
+    #wrapper #modalContainer #infoContainer {
+      width: 355px;
+      height: 340px;
+      background-color: #FFF; }
+    #wrapper #modalContainer #btnContainer {
+      width: 355px;
+      height: 87px;
+      background-color: #878787;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      border-radius: 0px 0px 10px 10px; }
+      #wrapper #modalContainer #btnContainer #getDirectionBtn {
+        margin-left: 10px;
+        margin-right: 0;
+        width: 200px;
+        height: 60px;
+        background-color: #00C95B;
+        border-radius: 10px 0px 0px 10px;
+        display: flex;
+        align-items: center;
+        text-align: center; }
+        #wrapper #modalContainer #btnContainer #getDirectionBtn h2 {
+          font-size: 20px;
+          color: #FFF;
+          margin-bottom: 0; }
+      #wrapper #modalContainer #btnContainer #closeBtn {
+        margin-right: 10px;
+        margin-left: 0;
+        width: 145px;
+        height: 60px;
+        background-color: #E52D27;
+        border-radius: 0px 10px 10px 0px;
+        display: flex;
+        align-items: center;
+        text-align: center; }
+        #wrapper #modalContainer #btnContainer #closeBtn h2 {
+          font-size: 20px;
+          color: #FFF;
+          margin-bottom: 0; }
 
 /*# sourceMappingURL=style.css.map */
