--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,11 +13,18 @@
 		position: absolute;
 	    height:100%;
 	    width:100%;
-	    z-index: 2;
+	    z-index: 1;
 	    top: 0;
 	    background-color: #f1c40f;
 		text-align: center;
-		display: none;
+		// display: none;
+
+		#homepage.hide {
+			opacity: 0;
+			height: 100%;
+			width: 1%;
+			transition: all .75s ease;
+		}
 
 	    #helpButton {
 	    	width: 40px;
@@ -44,54 +51,63 @@
 			margin-bottom: 120px;
 	    }
 
-	    button {
-	    	width: 255px;
-	    	height: 70px;
-	    	border-radius: 10px;
-	    	background-color: #fe8c00;
+	    h1 {
 	    	color: #FFFFFF;
-	    	font-size: 36px;
-	    	border: none;
+	    	font-size: 20px;
 	    }
 	}
 
-	#formContent {
+	#helpContainer {
+		width: 100%;
+		height: 100%;
+		background-color: #f1c40f;
 		position: absolute;
+		z-index: 2;
+		top: 0;
+		display: none;
+
+		#helpContent {
+			width: 345px;
+			height: 637px;
+			margin-top: 15px;
+			text-align: center;
+		}
+	}
+
+	#formContent {
 	    height:100%;
 	    width:100%;
-	    // z-index: 1;
 		
 		#searchContainer {
 			width: 375px;
 			height: 60px;
 			background-color: #F1C40F;
 			display: flex;
-			text-align: center;
 			align-items: center;
-			// position: absolute;
-			// top: 0;
 
 			#formInput {
 				width: 310px;
-				height: 40px;
+				height: 38px;
 				border-radius: 10px;
-				margin: 0px 0px 0px 10px;
 				border-style: none;
 			}
 
 			#submitBtn {
 				width: 40px;
-				height: 40px;
+				height: 41px;
 				border-radius: 10px;
+				border-style: none;
 				margin: 0 auto;
 				padding: 0;
 				display: inline-block;
-				line-height: 40px;
+				line-height: 42px;
 				text-align: center;
+				background-color: #fe8c00;
 
 				.fa-search {
 					width: 20px;
 					height: 20px;
+					color: #FFF;
 				}
 			}
 		}
@@ -99,16 +115,21 @@
 		#map {
 			width: 100%;
 			height: 505px;
-			// float: left;
-			
+
+			// #directionInfo {
+			// 	width: 355px;
+			// 	height: 50px;
+			// 	background-color: rgba(0, 15, 30, 0.5);
+			// 	z-index: 1;
+			// 	top: 0;
+			// 	position: absolute;
+			// }	
 		}
 
 		#optionContainer {
 			width: 375px;
-			height: 100px;
+			height: 101.5px;
 			background-color: #F1C40F;
-			// position: absolute;
-			// bottom: 0;
 			text-align: center;
 			
 			label {
@@ -119,10 +140,30 @@
 				.iconContainer {
 					width: 55px;
 					height: 55px;
-					background-color: #6B6B6B;
+					background-color: #878787;
 					margin-top: 10px;
 					margin-bottom: 5px;
 					border-radius: 10px;
+					display: flex;
+					align-items: center;
+
+					.fa-bed {
+						width: 40px;
+						height: 40px;
+						color: #FFF;
+					}
+
+					.fa-tree {
+						width: 40px;
+						height: 40px;
+						color: #FFF;
+					}
+
+					.fa-utensils {
+						width: 40px;
+						height: 40px;
+						color: #FFF;
+					}
 				}
 
 				p {
@@ -137,6 +178,75 @@
 			
 			label > input:checked + div { /* (RADIO CHECKED) IMAGE STYLES */
 			  	background-color: #fe8c00;
+			}
+		}
+	}
+
+	#modalContainer {
+		width: 375px;
+		height: 667px;
+		position: absolute;
+		top: 0px;
+		display: none;
+		background-color: rgba(0, 15, 30, 0.5);
+
+		#imgContainer {
+			width: 355px;
+			height: 220px;
+			background-color: pink;
+			margin-top: 10px;
+			border-radius: 10px 10px 0px 0px;
+		}
+
+		#infoContainer {
+			width: 355px;
+			height: 340px;
+			background-color: #FFF;
+		}
+
+		#btnContainer {
+			width: 355px;
+			height: 87px;
+			background-color: #878787;
+			display: flex;
+			align-items: center;
+			justify-content: space-between;
+			border-radius: 0px 0px 10px 10px;
+
+			#getDirectionBtn {
+				margin-left: 10px;
+				margin-right: 0;
+				width: 200px;
+				height: 60px;
+				background-color: #00C95B;
+				border-radius: 10px 0px 0px 10px;
+				display: flex;
+				align-items: center;
+				text-align: center;
+
+				h2 {
+					font-size: 20px;
+					color: #FFF;
+					margin-bottom: 0;
+				}
+			}
+
+			#closeBtn {
+				margin-right: 10px;
+				margin-left: 0;
+				width: 145px;
+				height: 60px;
+				background-color: #E52D27;
+				border-radius: 0px 10px 10px 0px;
+				display: flex;
+				align-items: center;
+				text-align: center;
+
+				h2 {
+					font-size: 20px;
+					color: #FFF;
+					margin-bottom: 0;
+				}
 			}
 		}
 	}
