--- a/sass/style.scss
+++ b/sass/style.scss
@@ -47,7 +47,7 @@
 	    	width: 110px;
 			height: 110px;
 			border-radius: 10px;
-			background-color: pink;
+			background-image: url('../img/logo.svg');
 			margin-bottom: 120px;
 	    }
 
