--- a/sass/style.scss
+++ b/sass/style.scss
@@ -10,6 +10,13 @@
 	position: relative;
 	font-family: 'Questrial', sans-serif;
 
+	#photoPlaceholder {
+		height: 104px;
+		width: 217px;
+		background-image: url(../img/placeLoc.jpg);
+		margin: 0;
+	}
+
 	#homepage {
 		position: absolute;
 	    height:100%;
